# mentat-session-logger

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  integration.yml
configs/: default.yml  glossary.yml  player_characters.yml.example  speaker_profiles.yml.example
configs/pipelines/: default.yml  pilot_no_llm.yml
envs/default/: README.md  config.yml
prompts/: chunk_summary_prompt.txt  final_notebook_prompt.txt  glossary_correction_prompt.txt  memory_update_prompt.txt  topic_classifier_prompt.txt
scripts/: 01_prepare_audio.py  02_transcribe_whisperx.py  03_enroll_voiceprints.py  04_match_speakers.py  05_apply_speaker_map.py  06_glossary_correct.py  07_chunk_transcript.py  08_classify_chunks.py  09_summarize_chunks.py  10_generate_final_outputs.py  11_apply_approved_memory_update.py  demo_pipeline.py
src/mentat_session_logger/: __init__.py  __main__.py  artifacts.py  audio.py  campaign_memory.py  chunking.py  classification.py  cli.py  config.py  diarization.py  environments.py  io.py  llm.py  models.py  pipeline.py  prompts.py  repositories.py  transcript.py  transcription.py  voiceprints.py
tests/integration/: ami_parser.py  conftest.py  test_llm_ami_data.py  test_llm_stages.py
tests/unit/: test_audio_preprocessing_stage.py  test_cli_commands.py  test_config_env_overrides.py  test_config_loading.py  test_environment_resolver.py  test_final_output_builders.py  test_llm_client.py  test_local_e2e_pipeline_with_mocks.py  test_memory_update_proposal.py  test_pipeline_runner.py  test_speaker_map_application.py  (+4 more)
(+4 files in other folders)
